# j2534-tools

./: CMakeLists.txt
FTDIProxy/: CMakeLists.txt  FTD2XX.H  FTDIProxy.cpp  FTDIProxy.def  FTDIProxy.h  dllmain.cpp  log.cpp  stdafx.h
Gateway/: CMakeLists.txt  dllmain.cpp  gateway.cpp  gateway.def  gateway.h  stdafx.h
ISO15765Proxy/: CMakeLists.txt  ISO15765Proxy.cpp  ISO15765Proxy.h  configurable_channel.cpp  configurable_channel.h  dllmain.cpp  internal.cpp  internal.h  iso15765.cpp  iso15765.h  j2534_v0404.h  log.cpp  log.h  simple.cpp  simple.h  test.cpp  utils.h
MVCIProxy/: CMakeLists.txt  MVCIProxy.cpp  MVCIProxy.def  MVCIProxy.h  dllmain.cpp  j2534_v0404.h  log.cpp  stdafx.h
Stub/: CMakeLists.txt  Stub.cpp  Stub.h  dllmain.cpp  log.cpp  stdafx.h  utils.h
test/: CMakeLists.txt  FTD2XX.H  dsfsdfsdf.cpp  j2534_v0404.h  log.cpp  log.h  stdafx.cpp  stdafx.h
